# platform.upstream.sessreg

./: .gitignore  COPYING  ChangeLog  Makefile.am  configure.ac  filenames.sed.c  project.config  sessreg-1.0.7.tar.bz2.delta  sessreg-1.0.7.tar.bz2.id  sessreg.c  sessreg.h  sessreg.man
man/: Makefile.am
packaging/: sessreg.spec
